# docfoundry

./: .coverage  .coveragerc  .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  Makefile  NOTICE  README.md  alembic.ini  check_db_schema.py  coverage.json  coverage.xml  doc_foundry_roadmap_issues_labels_api_spec.md  docfoundry.db  docfoundry_complete.py  docfoundry_production_fixes.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  final_verification_report.py  mkdocs.yml  performance_test_report.txt  pyproject.toml  pytest.ini  requirements.txt  test_ltr.py  test_policy.py  test_postgres_migration.py  test_results.txt  test_results_latest.txt  test_security_loop_guard.py  test_streaming.py  test_telemetry.py  verify_ssrf.py  🔍 Project Audit Report.docx
.github/: pull_request_template.md  repository-topics.md
alembic/: env.py
automation/: agent_config.json  branching_config.json  branching_strategy.py
config/: __init__.py  database.py  policy_config.yaml  policy_loader.py
data/: docfoundry.db
docs/: Project_Audit_Geminii.md  index.md  installation.md  monitoring.md  opentelemetry-integration.md  performance_optimizations_report.md  postgres-migration.md  security.md  testing.md
evaluation/: __init__.py  benchmarks.py  datasets.py  gold_set_runner.py  harness.py  metrics.py
examples/: streaming_client.py
hosting/: package-lock.json  package.json  tailwind.config.js
indexer/: build_index.py  chunker.py  embeddings.py  enhanced_source_validator.py  learning_to_rank.py  postgres_adapter.py  postgres_schema.sql  schema.sql  source_schema.py  sqlite_adapter.py
migrations/: 002_add_lineage_metadata.sql  lineage_migration.py
observability/: __init__.py  logging.py  metrics.py  prometheus_metrics.py  telemetry.py
ops/: runbook.md  slo.md
pipelines/: __init__.py  chunker.py  (+8 more)
(+76 files in other folders)
